log_task.txt
  File "C:\Users\hp\Documents\proj_python\tasks\daily_task.py", line 5
    sys.path.append("C:\Users\user\Desktop\proj_python")
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape
